# ARTI

./: .gitignore  AI_ASSISTANCE.md  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STABILITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  npm-release.yml  release.yml
docs/: fusion-pulse.md  unfold.md  webgpu-alpha.md
docs/reference/: fit-config.schema.json  task-graph.schema.json
examples/: arti_st_roundtrip.py  coord_mask_visibility_recall.py  fusion_pulse.py  pytorch_dependency_quickstart.py  unfold_trainable_regions.py
scripts/: generate_web_contract.py  generate_web_fixtures.py
src/arti/: __init__.py  __main__.py  _toml.py  _version.py  attachment.py  attachment_config.py  attachment_hub.py  attachment_training.py  backend.py  blocks.py  cli.py  config.py  conversation.py  distinctness.py  functional.py  init.py  inspection.py  layered_recall.py  layers.py  literal_decoder.py  literal_fit.py  membrane.py  models.py  nn.py  outputs.py  pretrained.py  pretrained_cli.py  providers.py  pulse.py  recall_topology.py  recall_ttt.py  runtime_vocab.py  serialization.py  source_integrity.py  stateful_recall.py  text_bitmap.py  text_tensor.py  training.py  usage.py  utils.py  (+2 more)
src/arti/_triton/: __init__.py  unfold.py
src/arti/fit/: __init__.py  artifacts.py  batch_schema.py  config.py  docs.py  doctor.py  insertion.py  metadata.py  objectives.py  plugins.py  profiles.py  project.py  runtime.py  scales.py  scanner.py  strategies.py
src/arti/integrations/: __init__.py  qwen.py
src/arti/jax/: __init__.py
src/arti/torch/: __init__.py  blocks.py  config.py  cuda.py  fit.py  functional.py  layers.py  models.py  outputs.py  training.py
src/arti/web/: __init__.py  contract.py  exporter.py  stateful.py
tests/: test_arti_st.py  test_attachment.py  test_backend_namespaces.py  test_blocks.py  test_conversation_context.py  test_device.py  test_fit_api.py  test_fold_module.py  test_fusion_pulse.py  test_half_activation.py  test_inspection.py  test_layered_recall.py  test_layers.py  test_learned_pulse.py  test_literal_decoder.py  test_masking.py  test_membrane.py  test_package_metadata.py  test_pulse.py  test_recall_refiner.py  test_recall_ttt.py  test_runtime_vocab.py  test_security_boundaries.py  test_serialization.py  test_source_integrity.py  test_stateful_recall.py  test_text_bitmap.py  test_text_tensor.py  test_torch_backend_runtime.py  test_unfold_module.py  test_usage_api.py  test_visual_field.py  test_visual_scan.py  test_web_export.py
tests_jax/: test_jax_contract.py  test_jax_torch_parity.py
